@@ -1,3 +1,8 @@
+2005-01-23  Joseph S. Myers  <joseph@codesourcery.com>
+
+	* warnings.m4 (ACX_PROG_CC_WARNING_ALMOST_PEDANTIC): Don't do
+	anything for non-GCC compilers.
+
 2004-12-03  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gxx-include-dir.m4: New file.
